--- a/ui/src/routes/styles.css
+++ b/ui/src/routes/styles.css
@@ -1,8 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto&display=swap');
+
 :root {
   box-sizing: border-box;
 }
 
 body {
+  font-family:
+    Roboto,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    sans-serif;
   min-height: 100vh;
   margin: 0;
+  color: silver;
 }
