ui: add the .clickable class

--- a/ui/src/routes/styles.css
+++ b/ui/src/routes/styles.css
@@ -10,6 +10,13 @@ html {
   box-sizing: inherit;
 }
 
+.clickable {
+  cursor: pointer;
+}
+.clickable:active {
+  opacity: 0.9;
+}
+
 body {
   font-family:
     Roboto,
