--- a/ui/src/routes/styles.css
+++ b/ui/src/routes/styles.css
@@ -10,10 +10,10 @@ html {
   box-sizing: inherit;
 }
 
-.clickable {
+.pressable {
   cursor: pointer;
 }
-.clickable:active {
+.pressable:active {
   transform: translateY(0.5px);
 }
 
