ui: tweak colors, css only

--- a/ui/src/routes/styles.css
+++ b/ui/src/routes/styles.css
@@ -36,9 +36,9 @@ body {
   color: silver;
   --app-max-width: 800px;
   --blue-highlight: hsl(215, 100%, 70%);
-  --movie-entry-border: Thistle;
-  --live-action-tv-entry-border: SkyBlue;
-  --animated-tv-entry-border: PaleGreen;
+  --movie-entry-border: rgb(206, 161, 206);
+  --live-action-tv-entry-border: rgb(115, 177, 203);
+  --animated-tv-entry-border: rgb(121, 180, 121);
 }
 
 /* a container exactly the size of viewport, good for things like page background */
