ui: show heading about "xx sesarch result" on top

--- a/ui/src/routes/styles.css
+++ b/ui/src/routes/styles.css
@@ -42,6 +42,7 @@ body {
   --movie-entry-border: rgb(206, 161, 206);
   --live-action-tv-entry-border: rgb(115, 177, 203);
   --animated-tv-entry-border: rgb(121, 180, 121);
+  --search-highlight: #ff0c;
 }
 
 /* a container exactly the size of viewport, good for things like page background */
