--- a/ui/src/routes/styles.css
+++ b/ui/src/routes/styles.css
@@ -48,6 +48,8 @@ body {
 /* a container exactly the size of viewport, good for things like page background */
 .container-all-viewport {
   position: fixed;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -55,19 +57,22 @@ body {
 
 /* a narrow container that takes full width on mobile, centers on widescreen, can vertically scroll if has lots of content; good for things like the main big list of movies */
 .container-narrow {
-  width: var(--content-width-on-mobile);
-  max-width: var(--content-width-on-desktop);
-  margin: 0 auto auto auto;
-}
-
-/* a narrow container that takes full width on mobile, centers on widescreen, always occupies full height and can't scroll; good as parent for placing things like bottom nav, modal curtain */
-.container-narrow-viewport {
-  height: 100%;
-  width: var(--content-width-on-mobile);
-  max-width: var(--content-width-on-desktop);
   position: fixed;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+  width: var(--content-width-on-mobile);
+  max-width: var(--content-width-on-desktop);
+}
+
+/* a narrow container that takes full width on mobile, centers on widescreen, always occupies full height and can't scroll; good as parent for placing things like bottom nav, modal curtain */
+.container-narrow-viewport {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: var(--content-width-on-mobile);
+  max-width: var(--content-width-on-desktop);
+  height: 100%;
   overflow: hidden;
 }
