--- a/ui/src/routes/styles.css
+++ b/ui/src/routes/styles.css
@@ -48,19 +48,21 @@ body {
   top: 0;
   bottom: 0;
   left: 0;
-  width: 100vw;
-  overflow-x: hidden;
+  right: 0;
+  overflow: hidden;
 }
 
 .full-width-scroll {
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
+  width: 100%;
   height: 100%;
+  /* text-align: center; */
 }
 /* a narrow container that takes full width on mobile, centers on widescreen */
 .narrow {
   margin: 0 auto;
-  width: 100vw;
+  width: 100%;
   max-width: var(--content-width-on-desktop);
   overflow-x: hidden;
 }
